# MLOps_course_homework1

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  docker-compose.yaml  inference.py  pyproject.toml
tests/: conftest.py  test_api.py  test_inference.py
