[project]
name = "mlops-course-homework1"
version = "0.1.0"
description = "MLOps course AGH - Laboratory 1 homework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.7.1",
    "joblib>=1.5.3",
    "pre-commit>=4.5.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
